<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- <item
         android:id="@+id/action_clock_out"
         android:enabled="true"
         android:icon="@drawable/ic_action_access_time"
         android:title="@string/text_clock_out"
         android:visible="false"
         app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_action_history"
        android:title="@string/text_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_view_profile"
        android:enabled="true"
        android:icon="@drawable/ic_action_person"
        android:title="@string/text_view_profile"
        app:showAsAction="ifRoom" />

    <item
     android:id="@+id/action_logout"
     android:enabled="true"
     android:icon="@drawable/ic_action_logout"
     android:title="@string/text_log_out"
     app:showAsAction="ifRoom" />
</menu>
