<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">


        <williamroocka.tut.onboard.views.FloatingLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <AutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_border"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLines="1" />

        </williamroocka.tut.onboard.views.FloatingLabel>

        <williamroocka.tut.onboard.views.FloatingLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <AutoCompleteTextView
                android:id="@+id/id_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_border"
                android:hint="@string/prompt_id_number"
                android:inputType="text"
                android:maxLines="1" />

        </williamroocka.tut.onboard.views.FloatingLabel>

        <williamroocka.tut.onboard.views.FloatingLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_border"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </williamroocka.tut.onboard.views.FloatingLabel>

        <williamroocka.tut.onboard.views.FloatingLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <AutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_border"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/prompt_short_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

        </williamroocka.tut.onboard.views.FloatingLabel>

        <williamroocka.tut.onboard.views.FloatingLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            whatever:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

            <AutoCompleteTextView
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_border"
                android:hint="@string/prompt_confirm_password"
                android:imeActionLabel="@string/prompt_short_confirm_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

        </williamroocka.tut.onboard.views.FloatingLabel>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/registerbutton"
                android:drawablePadding="6dp"
                android:text="@string/action_register"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_fsign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="6dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/action_msg_already_have_account"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
